--- a/html/añadirNuevoProducto.html
+++ b/html/añadirNuevoProducto.html
@@ -51,7 +51,7 @@
 
                     <li class="sidebar-item">
                         <a class="sidebar-link" href="añadirNuevoProducto.html">
-                            <i class="align-middle" data-feather="user"></i> <span class="align-middle">Añadir nuevo
+                            <i class="align-middle" data-feather="upload"></i> <span class="align-middle">Añadir nuevo
                                 Producto</span>
                         </a>
                     </li>
@@ -64,7 +64,7 @@
 
                     <li class="sidebar-item">
                         <a class="sidebar-link" href="gestorStock.html">
-                            <i class="align-middle" data-feather="square"></i> <span class="align-middle">Ver Productos
+                            <i class="align-middle" data-feather="shopping-cart"></i> <span class="align-middle">Ver Productos
                                 en Stock</span>
                         </a>
                     </li>
@@ -76,7 +76,7 @@
 
                     <li class="sidebar-item">
                         <a class="sidebar-link" href="gestorPedido.html">
-                            <i class="align-middle" data-feather="square"></i> <span class="align-middle">Ver
+                            <i class="align-middle" data-feather="truck"></i> <span class="align-middle">Ver
                                 Pedidos</span>
                         </a>
                     </li>
@@ -88,19 +88,19 @@
 
                     <li class="sidebar-item">
                         <a class="sidebar-link" href="gestorUsuario.html">
-                            <i class="align-middle" data-feather="square"></i> <span class="align-middle">Ver
+                            <i class="align-middle" data-feather="users"></i> <span class="align-middle">Ver
                                 Usuarios</span>
                         </a>
                     </li>
 
                     <li class="sidebar-header">
-                        Gestion de Contabilidad
+                        Gestion de Reporte
                     </li>
 
                     <li class="sidebar-item">
-                        <a class="sidebar-link" href="gestorContabilidad.html">
-                            <i class="align-middle" data-feather="square"></i> <span
-                                class="align-middle">Contabilidad</span>
+                        <a class="sidebar-link" href="gestorReporte.html">
+                            <i class="align-middle" data-feather="printer"></i> <span
+                                class="align-middle">Reporte</span>
                         </a>
                     </li>
             </div>
