--- a/html/gestorPedido.html
+++ b/html/gestorPedido.html
@@ -51,7 +51,7 @@
 
                     <li class="sidebar-item">
                         <a class="sidebar-link" href="añadirNuevoProducto.html">
-                            <i class="align-middle" data-feather="user"></i> <span class="align-middle">Añadir nuevo
+                            <i class="align-middle" data-feather="upload"></i> <span class="align-middle">Añadir nuevo
                                 Producto</span>
                         </a>
                     </li>
@@ -64,7 +64,7 @@
 
                     <li class="sidebar-item">
                         <a class="sidebar-link" href="gestorStock.html">
-                            <i class="align-middle" data-feather="square"></i> <span class="align-middle">Ver Productos
+                            <i class="align-middle" data-feather="shopping-cart"></i> <span class="align-middle">Ver Productos
                                 en Stock</span>
                         </a>
                     </li>
@@ -76,7 +76,7 @@
 
                     <li class="sidebar-item">
                         <a class="sidebar-link" href="gestorPedido.html">
-                            <i class="align-middle" data-feather="square"></i> <span class="align-middle">Ver
+                            <i class="align-middle" data-feather="truck"></i> <span class="align-middle">Ver
                                 Pedidos</span>
                         </a>
                     </li>
@@ -88,19 +88,19 @@
 
                     <li class="sidebar-item">
                         <a class="sidebar-link" href="gestorUsuario.html">
-                            <i class="align-middle" data-feather="square"></i> <span class="align-middle">Ver
+                            <i class="align-middle" data-feather="users"></i> <span class="align-middle">Ver
                                 Usuarios</span>
                         </a>
                     </li>
 
                     <li class="sidebar-header">
-                        Gestion de Contabilidad
+                        Gestion de Reporte
                     </li>
 
                     <li class="sidebar-item">
-                        <a class="sidebar-link" href="gestorContabilidad.html">
-                            <i class="align-middle" data-feather="square"></i> <span
-                                class="align-middle">Contabilidad</span>
+                        <a class="sidebar-link" href="gestorReporte.html">
+                            <i class="align-middle" data-feather="printer"></i> <span
+                                class="align-middle">Reporte</span>
                         </a>
                     </li>
             </div>
@@ -289,7 +289,19 @@
 
             <!-- Sección Principal -->
             <main id="content" class="main-container">
-                <h3 style="margin-bottom: 8px;">Gestor de Pedido</h3>
+                <h3 class="h3">Gestor de Pedido</h3>
+
+<!-- Campo de búsqueda -->
+<div class="search-container">
+    <input type="text" id="searchInput" placeholder="Buscar productos...">
+</div>
+
+<!-- Botones de exportación -->
+<div class="export-buttons">
+    <button onclick="exportToPDF()">Descargar PDF</button>
+    <button onclick="exportToJSON()">Exportar a JSON</button>
+    <button onclick="exportToExcel()">Exportar a Excel</button>
+</div>
 
                 <main class="table" id="customers_table">
                     <table class="table align-middle mb-0 bg-white">
@@ -311,12 +323,6 @@
                         <tbody class="orders-container">
                         </tbody>
                     </table>
-
-                    <div id="paginationControls" class="d-flex justify-content-center" style="margin-top: 20px;">
-                        <button id="prevPage" class="btn btn-secondary" disabled>Anterior</button>
-                        <span id="pageInfo">Página 1</span>
-                        <button id="nextPage" class="btn btn-secondary">Siguiente</button>
-                    </div>
 
 
 
@@ -395,7 +401,13 @@
 
 
 
-
+    <!-- Librería para exportar a PDF -->
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.14/jspdf.plugin.autotable.min.js"></script>
+ 
+ <!-- Librería para exportar a Excel -->
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.full.min.js"></script>
+ 
     <script src="../js/app.js"></script>
     <script src="../js/gestorPedido.js"></script>
 
