--- a/html/gestorProducto.html
+++ b/html/gestorProducto.html
@@ -15,6 +15,7 @@
 
     <link rel="stylesheet" href="../css/app.css">
     <link rel="stylesheet" href="../css/gestorProducto.css">
+   
 </head>
 
 <body>
@@ -51,7 +52,7 @@
 
                     <li class="sidebar-item">
                         <a class="sidebar-link" href="añadirNuevoProducto.html">
-                            <i class="align-middle" data-feather="user"></i> <span class="align-middle">Añadir nuevo
+                            <i class="align-middle" data-feather="upload"></i> <span class="align-middle">Añadir nuevo
                                 Producto</span>
                         </a>
                     </li>
@@ -64,7 +65,8 @@
 
                     <li class="sidebar-item">
                         <a class="sidebar-link" href="gestorStock.html">
-                            <i class="align-middle" data-feather="square"></i> <span class="align-middle">Ver Productos
+                            <i class="align-middle" data-feather="shopping-cart"></i> <span class="align-middle">Ver
+                                Productos
                                 en Stock</span>
                         </a>
                     </li>
@@ -76,7 +78,7 @@
 
                     <li class="sidebar-item">
                         <a class="sidebar-link" href="gestorPedido.html">
-                            <i class="align-middle" data-feather="square"></i> <span class="align-middle">Ver
+                            <i class="align-middle" data-feather="truck"></i> <span class="align-middle">Ver
                                 Pedidos</span>
                         </a>
                     </li>
@@ -88,19 +90,19 @@
 
                     <li class="sidebar-item">
                         <a class="sidebar-link" href="gestorUsuario.html">
-                            <i class="align-middle" data-feather="square"></i> <span class="align-middle">Ver
+                            <i class="align-middle" data-feather="users"></i> <span class="align-middle">Ver
                                 Usuarios</span>
                         </a>
                     </li>
 
                     <li class="sidebar-header">
-                        Gestion de Contabilidad
+                        Gestion de Reporte
                     </li>
 
                     <li class="sidebar-item">
-                        <a class="sidebar-link" href="gestorContabilidad.html">
-                            <i class="align-middle" data-feather="square"></i> <span
-                                class="align-middle">Contabilidad</span>
+                        <a class="sidebar-link" href="gestorReporte.html">
+                            <i class="align-middle" data-feather="printer"></i> <span
+                                class="align-middle">Reporte</span>
                         </a>
                     </li>
             </div>
@@ -290,13 +292,25 @@
             <!-- Sección Principal -->
             <!-- Sección Principal -->
             <main id="content" class="main-container">
-                <h3>Gestor de Producto</h3>
+                <h3 class="h3">Gestor de Producto</h3>
+
+                <!-- Campo de búsqueda -->
+    <div class="search-container">
+        <input type="text" id="searchInput" placeholder="Buscar productos...">
+    </div>
+
+    <!-- Botones de exportación -->
+    <div class="export-buttons">
+        <button onclick="exportToPDF()">Descargar PDF</button>
+        <button onclick="exportToJSON()">Exportar a JSON</button>
+        <button onclick="exportToExcel()">Exportar a Excel</button>
+    </div>
 
                 <main class="table" id="customers_table">
                     <table class="table align-middle mb-0 bg-white">
                         <thead class="bg-light">
                             <tr>
-                                <th>Id de Producto</th>
+                                <th>ID</th>
                                 <th>Imagen</th>
                                 <th>Nombre de Producto</th>
                                 <th>Categoría</th>
@@ -310,35 +324,10 @@
                             <!-- Los productos se añadirán aquí dinámicamente -->
                         </tbody>
                     </table>
-
-
-
-                    <div id="paginationControls" class="d-flex justify-content-center" style="margin-top: 20px;">
-                        <button id="prevPage" class="btn btn-secondary" disabled>Anterior</button>
-                        <span id="pageInfo">Página 1</span>
-                        <button id="nextPage" class="btn btn-secondary">Siguiente</button>
-                    </div>
-
-                    <!--
-    <section id="reportes" class="section-contabilidad">
-        <h2>Generar Reportes</h2>
-        <button class="generate-report">Generar Reporte</button>
-        <div class="report-options">
-            <label for="report-type">Tipo de Reporte:</label>
-            <select id="report-type">
-                <option value="diario">Diario</option>
-                <option value="semanal">Semanal</option>
-                <option value="mensual">Mensual</option>
-            </select>
-            <label for="format">Formato:</label>
-            <select id="format">
-                <option value="pdf">PDF</option>
-                <option value="csv">CSV</option>
-            </select>
-        </div>
-    </section>
-    -->
+                  
                 </main>
+            </main>
+            </main>
 
             </main>
 
@@ -432,7 +421,8 @@
                     <div class="row text-muted">
                         <div class="col-6 text-start">
                             <p class="mb-0">
-                                <a class="text-muted" href="../index.html" target="_blank"><strong>TechShop</strong></a> - 
+                                <a class="text-muted" href="../index.html" target="_blank"><strong>TechShop</strong></a>
+                                -
                                 <strong class="text-muted">Tu mejor opción</strong> &copy;
                             </p>
                         </div>
@@ -454,9 +444,17 @@
 
 
 
-
+ <!-- Librería para exportar a PDF -->
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.14/jspdf.plugin.autotable.min.js"></script>
+ 
+ <!-- Librería para exportar a Excel -->
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.full.min.js"></script>
+ 
     <script src="../js/gestorProducto.js"></script>
     <script src="../js/app.js"></script>
+
+
     <!-- ========================= JS here ========================= 
     <script src="../js/scripts.js"></script>
     <script src="../js/bootstrap.min.js"></script>
