--- a/html/gestorUsuario.html
+++ b/html/gestorUsuario.html
@@ -54,7 +54,7 @@
 
                     <li class="sidebar-item">
                         <a class="sidebar-link" href="añadirNuevoProducto.html">
-                            <i class="align-middle" data-feather="user"></i> <span class="align-middle">Añadir nuevo
+                            <i class="align-middle" data-feather="upload"></i> <span class="align-middle">Añadir nuevo
                                 Producto</span>
                         </a>
                     </li>
@@ -67,7 +67,7 @@
 
                     <li class="sidebar-item">
                         <a class="sidebar-link" href="gestorStock.html">
-                            <i class="align-middle" data-feather="square"></i> <span class="align-middle">Ver Productos
+                            <i class="align-middle" data-feather="shopping-cart"></i> <span class="align-middle">Ver Productos
                                 en Stock</span>
                         </a>
                     </li>
@@ -79,7 +79,7 @@
 
                     <li class="sidebar-item">
                         <a class="sidebar-link" href="gestorPedido.html">
-                            <i class="align-middle" data-feather="square"></i> <span class="align-middle">Ver
+                            <i class="align-middle" data-feather="truck"></i> <span class="align-middle">Ver
                                 Pedidos</span>
                         </a>
                     </li>
@@ -91,19 +91,19 @@
 
                     <li class="sidebar-item">
                         <a class="sidebar-link" href="gestorUsuario.html">
-                            <i class="align-middle" data-feather="square"></i> <span class="align-middle">Ver
+                            <i class="align-middle" data-feather="users"></i> <span class="align-middle">Ver
                                 Usuarios</span>
                         </a>
                     </li>
 
                     <li class="sidebar-header">
-                        Gestion de Contabilidad
+                        Gestion de Reporte
                     </li>
 
                     <li class="sidebar-item">
-                        <a class="sidebar-link" href="gestorContabilidad.html">
-                            <i class="align-middle" data-feather="square"></i> <span
-                                class="align-middle">Contabilidad</span>
+                        <a class="sidebar-link" href="gestorReporte.html">
+                            <i class="align-middle" data-feather="printer"></i> <span
+                                class="align-middle">Reporte</span>
                         </a>
                     </li>
             </div>
@@ -294,7 +294,19 @@
 
             <!-- Sección Principal -->
             <main id="content" class="main-container">
-                <h3 style="margin-bottom: 10px;">Gestor de Usuario</h3>
+                <h3 class="h3">Gestor de Usuario</h3>
+
+                <!-- Campo de búsqueda -->
+    <div class="search-container">
+        <input type="text" id="searchInput" placeholder="Buscar productos...">
+    </div>
+
+    <!-- Botones de exportación -->
+    <div class="export-buttons">
+        <button onclick="exportToPDF()">Descargar PDF</button>
+        <button onclick="exportToJSON()">Exportar a JSON</button>
+        <button onclick="exportToExcel()">Exportar a Excel</button>
+    </div>
 
                 <main class="table" id="customers_table">
                     <table class="table align-middle mb-0 bg-white">
@@ -323,27 +335,6 @@
                     </div>
 
 
-
-
-                    <!--
-    <section id="reportes" class="section-contabilidad">
-        <h2>Generar Reportes</h2>
-        <button class="generate-report">Generar Reporte</button>
-        <div class="report-options">
-            <label for="report-type">Tipo de Reporte:</label>
-            <select id="report-type">
-                <option value="diario">Diario</option>
-                <option value="semanal">Semanal</option>
-                <option value="mensual">Mensual</option>
-            </select>
-            <label for="format">Formato:</label>
-            <select id="format">
-                <option value="pdf">PDF</option>
-                <option value="csv">CSV</option>
-            </select>
-        </div>
-    </section>
-    -->
                 </main>
 
             </main>
@@ -447,7 +438,12 @@
 
 
 
+<!-- Librería para exportar a PDF -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.14/jspdf.plugin.autotable.min.js"></script>
 
+<!-- Librería para exportar a Excel -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.full.min.js"></script>
     <script src="../js/app.js"></script>
     <script src="../js/gestorUsuario.js"></script>
     <!-- ========================= JS here ========================= 
