--- a/html/pago.html
+++ b/html/pago.html
@@ -28,8 +28,7 @@
                                 <li>
                                     <div class="select-position">
                                         <select id="select5">
-                                            <option value="0" selected>English</option>
-                                            <option value="1">Español</option>
+                                            <option value="0" selected>Español</option>
                                         </select>
                                     </div>
                                 </li>
@@ -40,9 +39,7 @@
                         <div class="top-middle">
                             <ul class="useful-links">
                             <li><a href="index.html">Hogar</a></li>
-                                <li><a href="about-us.html">Sobre Nosotros</a></li>
-                                <li><a href="contact.html">Contactanos</a></li>
-                                <li><a href="html/asistente.html">Asistente</a></li>
+                                <li><a href="html/sobreNosotros.html">Sobre Nosotros</a></li>
                             </ul>
                         </div>
                     </div>
@@ -51,12 +48,6 @@
                             <div class="user">
                             </div>
                             <ul class="user-login">
-                                <li>
-                                    <a href="login.html">Sign In</a>
-                                </li>
-                                <li>
-                                    <a href="register.html">Register</a>
-                                </li>
                             </ul>
                         </div>
                     </div>
@@ -81,10 +72,10 @@
                             <!-- navbar search start -->
                             <div class="navbar-search search-style-5">
                                 <div class="search-input">
-                                    <input type="text" placeholder="Search">
+                                    <input class="search" type="text" placeholder="Search">
                                 </div>
                                 <div class="search-btn">
-                                    <button><i class="lni lni-search-alt"></i></button>
+                                    <button onclick="guardarBusqueda()"><i class="lni lni-search-alt"></i></button>
                                 </div>
                             </div>
                             <!-- navbar search Ends -->
@@ -122,11 +113,6 @@
                         <div class="mega-category-menu">
                             <span class="cat-button"><i class="lni lni-menu"></i>Categorias</span>
                             <ul class="sub-category">
-                                <li><a href="product-grids.html">Portatiles</a></li>
-                                <li><a href="product-grids.html">Celulares</a></li>
-                                <li><a href="product-grids.html">Relojes</a></li>
-                                <li><a href="product-grids.html">Auriculares</a></li>
-                                <li><a href="product-grids.html">Monitores</a></li>
                             </ul>
                         </div>
                         <!-- End Mega Category Menu -->
@@ -156,9 +142,6 @@
                             </li>
                             <li>
                                 <a href="javascript:void(0)"><i class="lni lni-instagram"></i></a>
-                            </li>
-                            <li>
-                                <a href="javascript:void(0)"><i class="lni lni-skype"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -227,9 +210,7 @@
                             <div class="single-footer f-contact">
                                 <h3>Contactanos</h3>
                                 <p class="phone">Telefono: +57 314 781 0003</p>
-                                <p class="mail">
-                                    <a href="jbaleta@unibarranquilla.edu.co">jbaleta@unibarranquilla.edu.co</a>
-                                </p>
+                                <p class="phone">jbaleta@unibarranquilla.edu.co</p>
                             </div>
                             <!-- End Single Widget -->
                         </div>
@@ -239,24 +220,13 @@
                             <div class="single-footer f-link">
                                 <h3>Informacion</h3>
                                 <ul>
-                                    <li><a href="about-us.html">Sobre Nosotros</a></li>
-                                    <li><a href="contact.html">Contactanos</a></li>
+                                    <li><a href="html/sobreNosotros.html">Sobre Nosotros</a></li>
                                 </ul>
                             </div>
                             <!-- End Single Widget -->
                         </div>
                         <div class="col-lg-3 col-md-6 col-12">
                             <!-- Single Widget -->
-                            <div class="single-footer f-link">
-                                <h3>Categorias Populares</h3>
-                                <ul>
-                                    <li><a href="product-grids.html">Portatiles</a></li>
-                                    <li><a href="product-grids.html">Celulares</a></li>
-                                    <li><a href="product-grids.html">Relojes</a></li>
-                                    <li><a href="product-grids.html">Auriculares</a></li>
-                                    <li><a href="product-grids.html">Monitores</a></li>
-                                </ul>
-                            </div>
                             <!-- End Single Widget -->
                         </div>
                     </div>
@@ -288,7 +258,6 @@
                                 <li><a href="javascript:void(0)"><i class="lni lni-facebook-filled"></i></a></li>
                                 <li><a href="javascript:void(0)"><i class="lni lni-twitter-original"></i></a></li>
                                 <li><a href="javascript:void(0)"><i class="lni lni-instagram"></i></a></li>
-                                <li><a href="javascript:void(0)"><i class="lni lni-google"></i></a></li>
                             </ul>
                         </div>
                     </div>
