--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
                     </div>
                     <div class="col-lg-4 col-md-4 col-12">
                         <div class="top-end">
-                            <div class="user">
-                            </div>
-                            <ul class="user-login">
+                            <ul class="user-login nav-item dropdown">
                             </ul>
                         </div>
                     </div>
@@ -419,5 +417,6 @@
     <script src="/js/validar-sesion.js"></script>
     <script src="/js/añadir-carrito.js"></script>
     <script src="/js/traer-inventario.js"></script>
+    <script src="../js/app.js"></script>
 </body>
 </html>
