detalles corregidos para antes de la presentacion

--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -95,17 +95,6 @@
                                 Usuarios</span>
                         </a>
                     </li>
-
-                    <li class="sidebar-header">
-                        Gestion de Reporte
-                    </li>
-
-                    <li class="sidebar-item">
-                        <a class="sidebar-link" href="gestorReporte.html">
-                            <i class="align-middle" data-feather="printer"></i> <span
-                                class="align-middle">Reporte</span>
-                        </a>
-                    </li>
             </div>
         </nav>
 
@@ -141,7 +130,7 @@
 
                 <div class="container-fluid p-0" style="width: 95%; margin: 20px auto;">
 
-                    <h1 class="h3 mb-3"><strong>Analytics</strong> Dashboard</h1>
+                    <h1 class="h3 mb-3">Analytics Dashboard</h1>
 
                     <div class="row">
                         <div class="col-xl-6 col-xxl-5 d-flex">
@@ -230,7 +219,7 @@
 
                     <div class="row">
                         <div class="col-12 col-md-6 col-xxl-3 d-flex order-2 order-xxl-3">
-                            <div class="card flex-fill w-100">
+                            <div class="card flex-fill" style="width: 20px;">
                                 <div class="card-header">
 
                                     <h5 class="card-title mb-0">Productos con Bajo Stock</h5>
@@ -242,7 +231,6 @@
                                             <thead>
                                                 <tr>
                                                     <th>ID</th>
-                                                    <th>Imagen</th>
                                                     <th>Nombre</th>
                                                     <th>Existencias</th>
                                                 </tr>
