--- a/html/log-in.html
+++ b/html/log-in.html
@@ -15,7 +15,7 @@
         <div class="row gx-lg-5 align-items-center">
           <div class="col-lg-6 mb-5 mb-lg-0">
             <h1 class="my-5 display-3 fw-bold ls-tight">
-                Bienvenido:)<br/>
+                Bienvenid@:)<br/>
               <span class="text-primary">te estabamos esperando</span>
             </h1>
           </div>
