--- a/html/product-details.html
+++ b/html/product-details.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Single Product - ShopGrids Bootstrap 5 eCommerce HTML Template.</title>
+    <title>Producto - TechShop</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.svg" />
@@ -310,5 +310,6 @@
     <script src="../js/validar-sesion.js"></script>
     <script src="../js/leer-productos.js"></script>
     <script src="../js/añadir-carrito.js"></script>
+    <script src="../js/app.js"></script></body>
 </body>
 </html>
