--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>ShopGrids - Bootstrap 5 eCommerce HTML Template.</title>
+    <title>Home - TechShop</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.svg" />
@@ -163,6 +163,8 @@
     <!-- End Header Area -->
 
     <!-- Start Hero Area -->
+    <div class="modal fade" id="securityModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="false">
+    </div>
     <section class="hero-area">
         <div class="container">
             <div class="row">
@@ -174,12 +176,11 @@
                             <div class="single-slider"
                                 style="background-image: url(/images/hero/slider-bg1.jpg);">
                                 <div class="content">
-                                    <h2><span>No restocking fee ($35 savings)</span>
+                                    <h2><span>Sin cargo por reposición (ahorro de $35)</span>
                                         M75 Sport Watch
                                     </h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                        incididunt ut labore et dolore magna aliqua.</p>
-                                    <h3><span>Now Only</span> $320.99</h3>
+                                    <p>¡Presentamos el M75 Sport Watch! Tu compañero perfecto para un estilo de vida activo y dinámico. Diseñado para aquellos que buscan rendimiento y elegancia, el M75 combina tecnología de vanguardia con un diseño robusto y moderno. ¡Descubre todo lo que puede hacer por ti!</p>
+                                    <h3><span>Solo Ahora</span> $320.99</h3>
                                 </div>
                             </div>
                             <!-- End Single Slider -->
@@ -187,12 +188,11 @@
                             <div class="single-slider"
                                 style="background-image: url(/images/hero/slider-bg2.jpg);">
                                 <div class="content">
-                                    <h2><span>Big Sale Offer</span>
-                                        Get the Best Deal on CCTV Camera
+                                    <h2><span>Gran Oferta</span>
+                                        Obten el mejor precio en CCTV Camera
                                     </h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                        incididunt ut labore et dolore magna aliqua.</p>
-                                    <h3><span>Combo Only:</span> $590.00</h3>
+                                    <p>¡Protege lo que más importa con la CCTV Camera ProSecure 360! Una cámara de seguridad avanzada diseñada para brindar tranquilidad y control en todo momento. Ya sea para tu hogar, negocio u oficina, esta cámara combina tecnología inteligente con una vigilancia confiable y de alta calidad.</p>
+                                    <h3><span>Combo Por Solo:</span> $590.00</h3>
                                 </div>
                             </div>
                             <!-- End Single Slider -->
@@ -208,7 +208,7 @@
                                 style="background-image: url('/images/hero/slider-bnr.jpg');">
                                 <div class="content">
                                     <h2>
-                                        <span>New line required</span>
+                                        <span>Nueva Linea</span>
                                         iPhone 12 Pro Max
                                     </h2>
                                     <h3>$259.99</h3>
@@ -220,8 +220,8 @@
                             <!-- Start Small Banner -->
                             <div class="hero-small-banner style2">
                                 <div class="content">
-                                    <h2>Weekly Sale!</h2>
-                                    <p>Saving up to 50% off all online store items this week.</p>
+                                    <h2>Venta Semanal!</h2>
+                                    <p>Ahorre hasta un 50% de descuento en todos los artículos de la tienda en línea esta semana.</p>
                                 </div>
                             </div>
                             <!-- Start Small Banner -->
@@ -264,7 +264,7 @@
                     <div class="single-banner" style="background-image:url('/images/banner/banner-1-bg.jpg')">
                         <div class="content">
                             <h2>Smart Watch 2.0</h2>
-                            <p>Space Gray Aluminum Case with <br>Black/Volt Real Sport Band </p>
+                            <p>Caja de aluminio gris espacial con correa deportiva negra/voltio real </p>
                         </div>
                     </div>
                 </div>
@@ -273,8 +273,7 @@
                         style="background-image:url('/images/banner/banner-2-bg.jpg')">
                         <div class="content">
                             <h2>Smart Headphone</h2>
-                            <p>Lorem ipsum dolor sit amet, <br>eiusmod tempor
-                                incididunt ut labore.</p>
+                            <p>¡Descubre la nueva era del sonido con los Smart Headphones X-Tune 500!!</p>
                         </div>
                     </div>
                 </div>
