--- a/paypal/pago.html
+++ b/paypal/pago.html
@@ -39,7 +39,7 @@
                         <div class="top-middle">
                             <ul class="useful-links">
                             <li><a href="../index.html">Hogar</a></li>
-                                <li><a href="../html/sobreNosotros.html">Sobre Nosotros</a></li>
+                                <li><a href="sobreNosotros.html">Sobre Nosotros</a></li>
                             </ul>
                         </div>
                     </div>
@@ -61,7 +61,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-3 col-md-3 col-7">
                         <!-- Start Header Logo -->
-                        <a class="navbar-brand" href="../index.html">
+                        <a class="navbar-brand" href="/index.html">
                             <h2>TechShop</h2>
                         </a>
                         <!-- End Header Logo -->
@@ -92,7 +92,7 @@
                             </div>
                             <div class="navbar-cart">
                                 <div class="cart-items">
-                                    <a href="../html/carrito.html" class="main-btn">
+                                    <a href="/html/carrito.html" class="main-btn">
                                         <i class="lni lni-cart"></i>
                                         <span class="cart-counter"></span>
                                     </a>
@@ -110,11 +110,6 @@
                 <div class="col-lg-8 col-md-6 col-12">
                     <div class="nav-inner">
                         <!-- Start Mega Category Menu -->
-                        <div class="mega-category-menu">
-                            <span class="cat-button"><i class="lni lni-menu"></i>Categorias</span>
-                            <ul class="sub-category">
-                            </ul>
-                        </div>
                         <!-- End Mega Category Menu -->
                         <!-- Start Navbar -->
                         <nav class="navbar navbar-expand-lg">
@@ -155,10 +150,11 @@
     <main>
         <div class="payment-container">
             <div class="left-column">
+                <h2 class="my-5">Informacion de envio</h2>
                 <div class="col-12">
-                    <button onclick="autoComplete()" class="btn btn-primary mb-5">auto-completar</button>
+                    <button onclick="autoComplete()" class="btn btn-primary mb-5 btn-autocompletar">auto-completar</button>
                   </div>
-                <form class="row g-3">
+                <form class="row g-3" id="formulario">
                     <div class="col-md-4">
                       <label for="nombre" class="form-label">nombre</label>
                       <input type="text" class="form-control" id="nombre" required>
@@ -185,10 +181,13 @@
                           Acepto terminos y condiciones
                         </label>
                       </div>
+                      <div class="btn-infromacion-personal">
+                        <button onclick="verifyCheckBox(event)" class="btn btn-primary mt-5">Guardar Cambios</button>
                     </div>
-                    <div class="col-12">
-                      <div id="paypal-button-container" class="paypal-button-container"></div>
-                      <p id="result-message"></p>
+                    </div>
+                    <h2 class="my-5">Metodos de pago</h2>
+                    <div class="col-12 paypal-container">
+                        <h5>primero ingrese las credenciales</h5>
                     </div>
                   </form>
             </div>
@@ -272,5 +271,6 @@
     <script src="../js/app.js"></script>
     <script src="https://www.paypal.com/sdk/js?client-id=AbaObwdE2ZLmGLoTaD5Q42OOz7Kh-0Qbd22zk2Uj-mBFsWFZwEsU32HHczh3QqylPDTbcLpqwoDz2Ngn&buyer-country=US&currency=USD&components=buttons&enable-funding=venmo"></script>
     <script src="paypal.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
