--- a/html/carrito.html
+++ b/html/carrito.html
@@ -222,5 +222,6 @@
 </footer>
   <script src="../js/validar-sesion.js"></script>
   <script src="../js/carrito.js"></script>
+  <script src="../js/app.js"></script>
 </body>
 </html>
