--- a/html/informacion-personal.html
+++ b/html/informacion-personal.html
@@ -324,6 +324,5 @@
     <script src="/js/validar-sesion.js"></script>
     <script src="/js/leer-usuario.js"></script>
     <script src="/js/editar-perfil.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> 
-</body>
+    <script src="../js/app.js"></script></body>
 </html>
