--- a/html/sobreNosotros.html
+++ b/html/sobreNosotros.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>ShopGrids - Bootstrap 5 eCommerce HTML Template.</title>
+    <title>Sobre Nosotros - TechShop</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.svg" />
@@ -257,5 +257,6 @@
   </footer>
     <script src="../js/validar-sesion.js"></script>
     <script src="/js/validar-sesion.js"></script>
+    <script src="../js/app.js"></script></body>
 </body>
 </html>
